# fracdiff

./: .buildinfo  .gitignore  CODE_OF_CONDUCT.md  LICENSE  Makefile  README.md  genindex.html  index.html  objects.inv  pyproject.toml  search.html  searchindex.js
.github/: CONTRIBUTING.md
.github/workflows/: bump.yml  ci.yml  doc.yml  publish.yml
_modules/: index.html
_modules/fracdiff/: base.html  fdiff.html  fracdiff.html  fracdiffstat.html
_modules/fracdiff/sklearn/: fracdiff.html  fracdiffstat.html
_modules/fracdiff/torch/: functional.html  module.html
docs/: Makefile  make.bat  requirements.txt
docs/source/: conf.py  index.rst
docs/source/_templates/: classtemplate.rst
examples/: Frac Diff Example.ipynb  Makefile  requirements.txt
examples/howto/: howto.ipynb  spx.py
fracdiff/: __init__.py  base.py  fdiff.py  fracdiff.py  fracdiffstat.py  stat.py  tol.py
fracdiff/sklearn/: __init__.py  fracdiff.py  fracdiffstat.py  stat.py  tol.py
fracdiff/torch/: __init__.py  functional.py  module.py
tests/: test_fdiff.py  test_fracdiff.py  test_fracdiffstat.py  test_howto.py  test_sklearn.py  test_stat.py  test_tol.py  test_torch.py  test_torch_importerror.py
tests/issues/: test_32.py
tests/sklearn/: test_fracdiff.py  test_fracdiffstat.py  test_sklearn.py  test_stat.py  test_tol.py
