[tool.poetry]
name = "fracdiff"
version = "0.8.0"
description = "Super-fast fractional differentiation."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/fracdiff/fracdiff"

[tool.poetry.dependencies]
python = ">=3.7.12,<3.10"
torch = {version = "^1.11.0", optional = true}
numpy = "^1.21.3"
scikit-learn = {version = "^1.0.1", optional = true}
scipy = "^1.7.1"
statsmodels = "^0.13.0"

[tool.poetry.extras]
torch = ["torch"]
scikit-learn = ["scikit-learn"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.11"
black = "^22.1"
isort = "^5.8.0"
Sphinx = "^4.2.0"
furo = "^2022.1.2"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
mypy = "^0.940"
pylint = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
