[tool.poetry]
name = "fracdiff"
version = "0.9.1"
description = "Super-fast fractional differentiation."
authors = ["Shota Imaki <shota.imaki.0801@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://github.com/fracdiff/fracdiff"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.1"
scipy = "^1.10.0"
statsmodels = ">=0.14.0rc0"
scikit-learn = {version = "^1.2.1", optional = true}
torch = {version = "^1.13.1", optional = true}

[tool.poetry.extras]
scikit-learn = ["scikit-learn"]
torch = ["torch"]

[tool.poetry.dev-dependencies]
pytest = "^7.0.1"
pytest-cov = "^4.0.0"
codecov = "^2.1.11"
black = "^23.1"
isort = "^5.8.0"
Sphinx = "^6.2.1"
furo = "^2023.3.27"
sphinx-autobuild = "^2021.3.14"
sphinx-copybutton = "^0.5.0"
mypy = "^1.2"
pylint = "^2.11.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.black]
skip-magic-trailing-comma = true

[tool.isort]
profile = "black"
force_single_line = true
